--- a/style.css
+++ b/style.css
@@ -1,7 +1,15 @@
 h1 {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: large;
+
     color: rgb(11, 175, 230);
+}
+
+img {
+    width: 400px;
+}
+
+h2 {
+    font-style:oblique;
 }
 
 p {
